{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 886,
  "lineage": "33ddc512-dc6d-7ddb-1865-30e41a47e81d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_existing",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_existing",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_existing",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.network[0]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:208030346312:security-group/sg-0809096d6e58670d8",
            "description": "ALB: allow 80/443 from internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0809096d6e58670d8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "zinovia-fans-prod-alb-20260213112324053400000001",
            "name_prefix": "zinovia-fans-prod-alb-",
            "owner_id": "208030346312",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "zinovia-fans-prod-alb-sg"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "zinovia-fans-prod-alb-sg",
              "Project": "zinovia-fans"
            },
            "timeouts": null,
            "vpc_id": "vpc-01cc3927aca442993"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "deposed": "637ed854",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:208030346312:security-group/sg-0107cd458207ec0f5",
            "description": "ALB: allow 80/443 from internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0107cd458207ec0f5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "zinovia-fans-staging-alb-20260213094646855600000008",
            "name_prefix": "zinovia-fans-staging-alb-",
            "owner_id": "208030346312",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "staging",
              "Name": "zinovia-fans-staging-alb-sg"
            },
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "zinovia-fans-staging-alb-sg",
              "Project": "zinovia-fans"
            },
            "timeouts": null,
            "vpc_id": "vpc-01cc3927aca442993"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network[0]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:208030346312:security-group/sg-0566c87e2bc0ae8c3",
            "description": "ECS tasks: allow from ALB only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0566c87e2bc0ae8c3",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0809096d6e58670d8"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "zinovia-fans-prod-ecs-20260213112327319700000004",
            "name_prefix": "zinovia-fans-prod-ecs-",
            "owner_id": "208030346312",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "zinovia-fans-prod-ecs-sg"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "zinovia-fans-prod-ecs-sg",
              "Project": "zinovia-fans"
            },
            "timeouts": null,
            "vpc_id": "vpc-01cc3927aca442993"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_security_group.alb",
            "module.network.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "deposed": "e4596a77",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:208030346312:security-group/sg-09b01e4294e95df6e",
            "description": "ECS tasks: allow from ALB only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09b01e4294e95df6e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0107cd458207ec0f5"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "zinovia-fans-staging-ecs-2026021309465957490000000a",
            "name_prefix": "zinovia-fans-staging-ecs-",
            "owner_id": "208030346312",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "staging",
              "Name": "zinovia-fans-staging-ecs-sg"
            },
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "zinovia-fans-staging-ecs-sg",
              "Project": "zinovia-fans"
            },
            "timeouts": null,
            "vpc_id": "vpc-01cc3927aca442993"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_security_group.alb",
            "module.network.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network[0]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:208030346312:security-group/sg-00408d4494d8823e3",
            "description": "RDS: allow from ECS tasks only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00408d4494d8823e3",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0566c87e2bc0ae8c3"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "zinovia-fans-prod-rds-20260213112330627900000005",
            "name_prefix": "zinovia-fans-prod-rds-",
            "owner_id": "208030346312",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "zinovia-fans-prod-rds-sg"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "zinovia-fans-prod-rds-sg",
              "Project": "zinovia-fans"
            },
            "timeouts": null,
            "vpc_id": "vpc-01cc3927aca442993"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_security_group.alb",
            "module.network.aws_security_group.ecs",
            "module.network.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "deposed": "5bbd8238",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:208030346312:security-group/sg-00de5dea0fd231045",
            "description": "RDS: allow from ECS tasks only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00de5dea0fd231045",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09b01e4294e95df6e"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "zinovia-fans-staging-rds-2026021309471978580000000c",
            "name_prefix": "zinovia-fans-staging-rds-",
            "owner_id": "208030346312",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "staging",
              "Name": "zinovia-fans-staging-rds-sg"
            },
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "zinovia-fans-staging-rds-sg",
              "Project": "zinovia-fans"
            },
            "timeouts": null,
            "vpc_id": "vpc-01cc3927aca442993"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_security_group.alb",
            "module.network.aws_security_group.ecs",
            "module.network.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network[0]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:208030346312:subnet/subnet-0c70424244309cdd2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.128.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c70424244309cdd2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "208030346312",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "zinovia-fans-prod-private-us-east-1a"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "zinovia-fans-prod-private-us-east-1a",
              "Project": "zinovia-fans"
            },
            "vpc_id": "vpc-01cc3927aca442993"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.network.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:208030346312:subnet/subnet-083997cbbc2d6e6ca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.144.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-083997cbbc2d6e6ca",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "208030346312",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "zinovia-fans-prod-private-us-east-1b"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "zinovia-fans-prod-private-us-east-1b",
              "Project": "zinovia-fans"
            },
            "vpc_id": "vpc-01cc3927aca442993"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.network.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:208030346312:subnet/subnet-0a228c6008ef3b220",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.160.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a228c6008ef3b220",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "208030346312",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "zinovia-fans-prod-private-us-east-1c"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "zinovia-fans-prod-private-us-east-1c",
              "Project": "zinovia-fans"
            },
            "vpc_id": "vpc-01cc3927aca442993"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.network.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network[0]",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:208030346312:vpc/vpc-01cc3927aca442993",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00952cdb94626e09d",
            "default_route_table_id": "rtb-0f5cbea8a30c125c3",
            "default_security_group_id": "sg-037e01ed7950e4ddf",
            "dhcp_options_id": "dopt-04598215c5a7efe3d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01cc3927aca442993",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f5cbea8a30c125c3",
            "owner_id": "208030346312",
            "tags": {
              "Name": "zinovia-fans-prod-vpc"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "zinovia-fans-prod-vpc",
              "Project": "zinovia-fans"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}